--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
+    "@react-oauth/google": "^0.11.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.23.3",
+    "antd": "^5.10.0",
     "axios": "^1.5.1",
-    "bootstrap": "^5.2.1",
+    "bootstrap": "^5.3.2",
+    "bulma": "^0.9.4",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.0",
     "react-responsive-carousel": "^3.2.23",
@@ -24,6 +27,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-slidy": "^4.3.3",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "use-debounce": "^8.0.4",
     "web-vitals": "^2.1.4"
@@ -53,6 +57,7 @@
     ]
   },
   "devDependencies": {
-    "source-map-loader": "^4.0.1"
+    "source-map-loader": "^4.0.1",
+    "vite": "^4.4.11"
   }
 }
