--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,5 @@
-REACT_APP_MOVIE_API_KEY=44bb27216833398dd75c6b3cf00f51bd
-REACT_APP_MOVIE_IMG_ORI=https://image.tmdb.org/t/p/w500
+# REACT_APP_MOVIE_API_KEY=44bb27216833398dd75c6b3cf00f51bd
+# REACT_APP_MOVIE_IMG_ORI=https://image.tmdb.org/t/p/w500
+
+VITE_API=https://shy-cloud-3319.fly.dev
+VITE_GOOGLE_OAUTH_CLIENT_ID=604818404990-r0vci8876jbjc2ajmgd5f5lijo7eo09d.apps.googleusercontent.com
