--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
     "@react-oauth/google": "^0.11.1",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +22,7 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.0",
+    "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
@@ -28,6 +30,8 @@
     "react-slick": "^0.29.0",
     "react-slidy": "^4.3.3",
     "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
     "use-debounce": "^8.0.4",
     "web-vitals": "^2.1.4"
